--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,6 +4,7 @@
 @import 'Home';
 @import 'NavBar';
 @import 'Top';
+@import 'TalkingCar';
 @import 'ReservationForm';
 @import 'Mission';
 @import 'Footer';
