--- a/src/css/AboutUs.scss
+++ b/src/css/AboutUs.scss
@@ -1,3 +1,26 @@
+.about-us {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.about-us__description-container {
+    width: 100%;
+    // padding-top: 80px;
+    // padding-bottom: 80px;
+}
+
 .about-us__services {
     display: flex;
+}
+
+@media only screen and (min-width: 1024px) {
+    .about-us__description-container {
+        // width: 85%;
+        max-width: 1280px;
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
 }
