--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -6,24 +6,6 @@
     align-items: center;
 }
 
-.top__floating-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 1280px;
-    // margin-left: auto;
-    // margin-right: auto;
-    // left: 0;
-    // right: 0;
-}
-
-.top__car-photo-container {
-    display: none;
-    // width: 500px;
-    // margin-left: 50px;
-}
-
 .home__home-content {
     width: 100%;
     display: flex;
@@ -83,20 +65,6 @@
 }
 
 @media only screen and (min-width: 1024px) {
-    .top__floating-container {
-        position: absolute;
-        top: 300px;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 80%;
-    }
-
-    .top__car-photo-container {
-        display: block;
-        width: 500px;
-        // margin-left: 50px;
-    }
-
     // .home__home-content {
     //     width: 80%;
     //     padding-top: 50px;
@@ -104,7 +72,9 @@
 
     .home-content__welcome-container {
         width: 85%;
-        padding: 80px;
+        max-width: 1280px;
+        padding-top: 80px;
+        padding-bottom: 80px;
     }
 
     .welcome-container__general-info {
