--- a/src/css/Mission.scss
+++ b/src/css/Mission.scss
@@ -30,7 +30,9 @@
 @media only screen and (min-width: 1024px) {
     .home-content__mission-container {
         width: 85%;
-        padding: 80px;
+        max-width: 1280px;
+        padding-top: 80px;
+        padding-bottom: 80px;
         flex-direction: row;
     }
 
