--- a/src/css/main.css
+++ b/src/css/main.css
@@ -679,26 +679,70 @@ body, p {
 }
 .about-us {
   position: relative;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .about-us__description-container {
-  padding-top: 80px;
-  padding-bottom: 80px;
+  width: 100%;
 }
 
 .about-us__services {
+  width: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.about-us-services__services-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-us__fleet {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-us-fleet__description {
+  width: 100%;
+}
+
+.about-us-fleet_car-container {
+  width: 100%;
+  background-color: var(--color-blue);
 }
 
 @media only screen and (min-width: 1024px) {
   .about-us__description-container {
-    width: 85%;
     max-width: 1280px;
     padding-top: 80px;
     padding-bottom: 80px;
+  }
+
+  .about-us__services {
+    max-width: 1280px;
+  }
+
+  .about-us-services__services-container {
+    flex-direction: row;
+  }
+
+  .about-us__fleet {
+    width: 100%;
+    max-width: 1280px;
+    flex-direction: row;
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  .about-us-fleet__description {
+    width: 50%;
+  }
+
+  .about-us-fleet_car-container {
+    width: 50%;
   }
 }
 
