Work on FloatingCar: make it more responsive.

--- a/main.css
+++ b/main.css
@@ -439,13 +439,14 @@ body, p {
 
 @media only screen and (min-width: 768px) {
   .top {
-    height: 60vh;
+    height: 547px;
     background-image: url("../images/bg.jpg");
   }
 }
 .top__floating-container {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   max-width: 1280px;
 }
@@ -457,15 +458,15 @@ body, p {
 @media only screen and (min-width: 1024px) {
   .top__floating-container {
     position: absolute;
-    top: 25vh;
-    grid-template-columns: 1fr 1.5fr;
-    grid-gap: 50px;
-    width: 67%;
+    top: 320px;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
   }
 
   .top__car-photo-container {
     display: block;
-    width: 100%;
+    width: 500px;
   }
 }
 .reservation-form {
@@ -524,8 +525,7 @@ body, p {
 }
 @media only screen and (min-width: 768px) {
   .reservation-form {
-    width: 100%;
-    max-width: 534px;
+    width: 425px;
     padding: 40px;
   }
 
