--- a/src/css/TalkingCar.css
+++ b/src/css/TalkingCar.css
@@ -1,7 +1,6 @@
 .top__floating-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
   width: 100%;
   max-width: 1280px;
 }
@@ -13,15 +12,15 @@
 @media only screen and (min-width: 1024px) {
   .top__floating-container {
     position: absolute;
-    top: 300px;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 80%;
+    top: 25vh;
+    grid-template-columns: 1fr 1.5fr;
+    grid-gap: 50px;
+    width: 67%;
   }
 
   .top__car-photo-container {
     display: block;
-    width: 500px;
+    width: 100%;
   }
 }
 
