--- a/src/css/TalkingCar.scss
+++ b/src/css/TalkingCar.scss
@@ -1,14 +1,12 @@
 
 .top__floating-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: flex-start;
     width: 100%;
     max-width: 1280px;
-    // margin-left: auto;
-    // margin-right: auto;
-    // left: 0;
-    // right: 0;
 }
 
 .top__car-photo-container {
@@ -20,15 +18,17 @@
 @media only screen and (min-width: 1024px) {
     .top__floating-container {
         position: absolute;
-        top: 300px;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 80%;
+        top: 25vh;
+        grid-template-columns: 1fr 1.5fr;
+        grid-gap: 50px;
+        // flex-direction: row;
+        // justify-content: space-between;
+        width: 67%;
     }
 
     .top__car-photo-container {
         display: block;
-        width: 500px;
+        width: 100%;
         // margin-left: 50px;
     }
 }
