--- a/src/css/Top.scss
+++ b/src/css/Top.scss
@@ -14,7 +14,7 @@
 
 @media only screen and (min-width: 768px) {
     .top {
-        height: 547px;
+        height: 60vh;
         background-image: url('../images/bg.jpg');
     }
 }
