--- a/src/css/ReservationForm.scss
+++ b/src/css/ReservationForm.scss
@@ -59,7 +59,7 @@
     .reservation-form {
         width: 100%;
         max-width: 534px;
-        padding: 40px;
+        padding: 2em;
     }
 
     .reservation-form__triangle {
