--- a/src/css/main.css
+++ b/src/css/main.css
@@ -526,7 +526,7 @@ body, p {
   .reservation-form {
     width: 100%;
     max-width: 534px;
-    padding: 40px;
+    padding: 2em;
   }
 
   .reservation-form__triangle {
