--- a/src/css/main.css
+++ b/src/css/main.css
@@ -276,7 +276,7 @@ body, p {
   .home-content__welcome-container {
     width: 85%;
     max-width: 1280px;
-    padding-top: 80px;
+    padding-top: 200px;
     padding-bottom: 80px;
   }
 
@@ -482,21 +482,22 @@ body, p {
   display: none;
   position: absolute;
   right: -49px;
-  bottom: 40px;
+  bottom: 25px;
   height: 0;
   width: 0;
   border-top: 25px solid transparent;
   border-bottom: 25px solid transparent;
   border-right: 25px solid transparent;
-  border-left: 25px solid var(--color-white);
+  border-left: 35px solid var(--color-white);
   background-color: transparent;
 }
 
 .reservation-form__input {
   width: 100%;
-  padding: 16px 26px;
+  padding: 0.5em 1em;
+  margin-bottom: 0.5em;
   border: 1px solid var(--color-input-border);
-  font-size: var(--font-22);
+  font-size: 1.15em;
   background-color: var(--color-input-background);
 }
 
@@ -515,18 +516,19 @@ body, p {
 
 @media only screen and (min-width: 400px) {
   .reservation-form__submit-btn {
-    padding: 16px 26px;
+    padding: 1em 1.2em;
+    margin-top: 2em;
   }
 
   .reservation-form__submit-text {
-    font-size: 1.35em;
+    font-size: 1.15em;
   }
 }
 @media only screen and (min-width: 768px) {
   .reservation-form {
     width: 100%;
     max-width: 534px;
-    padding: 2em;
+    padding: 1.5em;
   }
 
   .reservation-form__triangle {
@@ -717,7 +719,7 @@ body, p {
 @media only screen and (min-width: 1024px) {
   .about-us__description-container {
     max-width: 1280px;
-    padding-top: 80px;
+    padding-top: 200px;
     padding-bottom: 80px;
   }
 
