Add font-size: 62.5% to html tag.

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 a {
   color: inherit;
 }
@@ -158,5 +162,19 @@ table {
 a {
   text-decoration: none;
 }
+
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
+/*# sourceMappingURL=reset.css.map */
 
 /*# sourceMappingURL=reset.css.map */
