--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 a {
   color: inherit;
 }
@@ -747,5 +751,18 @@ body, p {
     width: 50%;
   }
 }
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
 
 /*# sourceMappingURL=main.css.map */
